--- a/HCore-Cache/HCore-Cache.csproj
+++ b/HCore-Cache/HCore-Cache.csproj
@@ -2,14 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <RuntimeFrameworkVersion>2.2.4</RuntimeFrameworkVersion>
     <RootNamespace>HCore.Cache</RootNamespace>
     <AssemblyName>HCore.Cache</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.4" />
     <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
-    <PackageReference Include="VIEApps.Enyim.Caching" Version="1.5.1901.2" />
+    <PackageReference Include="VIEApps.Enyim.Caching" Version="1.6.1904.3" />
   </ItemGroup>
 
 </Project>
