--- a/HCore-PagesUI-Classes/HCore-PagesUI-Classes.csproj
+++ b/HCore-PagesUI-Classes/HCore-PagesUI-Classes.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <RuntimeFrameworkVersion>2.2.4</RuntimeFrameworkVersion>
     <RootNamespace>HCore.PagesUI.Classes</RootNamespace>
     <AssemblyName>HCore.PagesUI.Classes</AssemblyName>    
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.4" />
   </ItemGroup>
   
   <ItemGroup>
