--- a/HCore-Templating/HCore-Templating.csproj
+++ b/HCore-Templating/HCore-Templating.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <RuntimeFrameworkVersion>2.2.4</RuntimeFrameworkVersion>
     <RootNamespace>HCore.Templating</RootNamespace>
     <AssemblyName>HCore.Templating</AssemblyName>
   </PropertyGroup>
@@ -12,7 +13,7 @@
     <PackageReference Include="jsreport.Binary.OSX" Version="2.2.1" />
     <PackageReference Include="jsreport.Binary.Linux" Version="2.2.2" />
     <PackageReference Include="jsreport.Local" Version="2.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.4" />
   </ItemGroup>
 
   <ItemGroup>
