* Read external directory configuration

--- a/HCore-Identity/HCore-Identity.csproj
+++ b/HCore-Identity/HCore-Identity.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>    
     <ProjectReference Include="..\HCore-Amqp\HCore-Amqp.csproj" />    
     <ProjectReference Include="..\HCore-Database\HCore-Database.csproj" />    
+    <ProjectReference Include="..\HCore-Directory\HCore-Directory.csproj" />    
     <ProjectReference Include="..\HCore-Emailing\HCore-Emailing.csproj" />
     <ProjectReference Include="..\HCore-Templating\HCore-Templating.csproj" />
     <ProjectReference Include="..\HCore-Tenants\HCore-Tenants.csproj" />
