* Try to fix outgoing CLOSE_WAIT hanging connections on Google APIs (see https://github.com/googleapis/google-cloud-dotnet/issues/3121)

--- a/HCore-Storage/HCore-Storage.csproj
+++ b/HCore-Storage/HCore-Storage.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis" Version="1.40.2" />
     <PackageReference Include="Google.Cloud.Storage.V1" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.4" />
     <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="10.0.1" />
