--- a/HCore-Segment/HCore-Segment.csproj
+++ b/HCore-Segment/HCore-Segment.csproj
@@ -1,15 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-    <RuntimeFrameworkVersion>2.2.4</RuntimeFrameworkVersion>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <AssemblyName>HCore.Segment</AssemblyName>
     <RootNamespace>HCore.Segment</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Analytics.MultiPlatformTest" Version="0.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 </Project>
