--- a/HCore-Identity-PagesUI-Classes/HCore-Identity-PagesUI-Classes.csproj
+++ b/HCore-Identity-PagesUI-Classes/HCore-Identity-PagesUI-Classes.csproj
@@ -1,14 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-    <RuntimeFrameworkVersion>2.2.4</RuntimeFrameworkVersion>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>HCore.Identity.PagesUI.Classes</RootNamespace>
-    <AssemblyName>HCore.Identity.PagesUI.Classes</AssemblyName>    
+    <AssemblyName>HCore.Identity.PagesUI.Classes</AssemblyName>
+    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.4" />
     <PackageReference Include="reCAPTCHA.AspNetCore" Version="2.2.3" />
   </ItemGroup>
   
