--- a/HCore-PagesUI-Classes/HCore-PagesUI-Classes.csproj
+++ b/HCore-PagesUI-Classes/HCore-PagesUI-Classes.csproj
@@ -1,16 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-    <RuntimeFrameworkVersion>2.2.4</RuntimeFrameworkVersion>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>HCore.PagesUI.Classes</RootNamespace>
-    <AssemblyName>HCore.PagesUI.Classes</AssemblyName>    
+    <AssemblyName>HCore.PagesUI.Classes</AssemblyName>
+    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.4" />
-  </ItemGroup>
-  
   <ItemGroup>
     <ProjectReference Include="..\HCore-Identity\HCore-Identity.csproj" />
   </ItemGroup>
