--- a/HCore-PagesUI-Views/HCore-PagesUI-Views.csproj
+++ b/HCore-PagesUI-Views/HCore-PagesUI-Views.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>HCore.PagesUI.Views</RootNamespace>
     <AssemblyName>HCore.PagesUI.Views</AssemblyName>
     <EnableDefaultContentItems>false</EnableDefaultContentItems>    
+	<AddRazorSupportForMvc>true</AddRazorSupportForMvc>
   </PropertyGroup>
 
   <ItemGroup>
