Add static code analyzer

--- a/HCore-Identity-PagesUI-Views/HCore-Identity-PagesUI-Views.csproj
+++ b/HCore-Identity-PagesUI-Views/HCore-Identity-PagesUI-Views.csproj
@@ -111,8 +111,12 @@
   </ItemGroup>
 
   <ItemGroup>
+	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.4.43" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <ProjectReference Include="..\HCore-Identity-PagesUI-Classes\HCore-Identity-PagesUI-Classes.csproj" />
-    <ProjectReference Include="..\HCore-Identity\HCore-Identity.csproj" />
+    <ProjectReference Include="..\HCore-Identity\HCore-Identity.csproj" />	
   </ItemGroup>
 
 </Project>
