--- a/HCore-PagesUI-Classes/HCore-PagesUI-Classes.csproj
+++ b/HCore-PagesUI-Classes/HCore-PagesUI-Classes.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.4.43" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <ProjectReference Include="..\HCore-Identity\HCore-Identity.csproj" />
   </ItemGroup>
 
