--- a/HCore-Directory/HCore-Directory.csproj
+++ b/HCore-Directory/HCore-Directory.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-
+	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.4.43" />
   </ItemGroup>
 
 </Project>
