--- a/HCore-Identity-PagesUI-Classes/HCore-Identity-PagesUI-Classes.csproj
+++ b/HCore-Identity-PagesUI-Classes/HCore-Identity-PagesUI-Classes.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="reCAPTCHA.AspNetCore" Version="2.2.3" />
+	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.4.43" />
   </ItemGroup>
   
   <ItemGroup>
