--- a/HCore-Pusher/HCore-Pusher.csproj
+++ b/HCore-Pusher/HCore-Pusher.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="PusherServer" Version="4.2.0" />
+	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.4.43" />
   </ItemGroup>
 
   <ItemGroup>
