--- a/HCore-Scheduling/HCore-Scheduling.csproj
+++ b/HCore-Scheduling/HCore-Scheduling.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Quartz" Version="3.0.7" />
     <PackageReference Include="Quartz.Serialization.Json" Version="3.0.7" />
+	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.4.43" />
   </ItemGroup>
 
   <ItemGroup>
