--- a/HCore-Segment/HCore-Segment.csproj
+++ b/HCore-Segment/HCore-Segment.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Analytics.MultiPlatformTest" Version="0.2.0" />
+	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.4.43" />
   </ItemGroup>
 
   <ItemGroup>
