--- a/HCore-Storage/HCore-Storage.csproj
+++ b/HCore-Storage/HCore-Storage.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Google.Apis" Version="1.43.0" />
     <PackageReference Include="Google.Cloud.Storage.V1" Version="2.5.0" />
     <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.1.2" />
+	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.4.43" />
   </ItemGroup>
 
   <ItemGroup>
