--- a/HCore-Templating/HCore-Templating.csproj
+++ b/HCore-Templating/HCore-Templating.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="jsreport.Binary.OSX" Version="2.6.1" />
     <PackageReference Include="jsreport.Binary.Linux" Version="2.6.1" />
     <PackageReference Include="jsreport.Local" Version="2.2.1" />
+	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.4.43" />
   </ItemGroup>
 
   <ItemGroup>
