--- a/HCore-Translations/HCore-Translations.csproj
+++ b/HCore-Translations/HCore-Translations.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.4.43" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <Compile Update="Resources\Messages.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
