--- a/HCore-Web/HCore-Web.csproj
+++ b/HCore-Web/HCore-Web.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaServices" Version="3.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.1" />
 	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.4.43" />
+	<PackageReference Include="Sentry.AspNetCore" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
