Add language metadata provider Add text

--- a/HCore-Metadata/HCore-Metadata.csproj
+++ b/HCore-Metadata/HCore-Metadata.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IsoNames.NETStandard" Version="1.2.1" />
     <PackageReference Include="MaxMind.GeoIP2" Version="3.2.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
     <PackageReference Include="Nager.Country" Version="1.0.4" />
