--- a/HCore-Cache/HCore-Cache.csproj
+++ b/HCore-Cache/HCore-Cache.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
+    <PackageReference Include="StackExchange.Redis.Extensions.AspNetCore" Version="6.3.6" />    
+    <PackageReference Include="StackExchange.Redis.Extensions.Binary" Version="6.3.6" />
     <PackageReference Include="VIEApps.Enyim.Caching" Version="1.8.2012.1" />
 	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.2.32">
 	  <PrivateAssets>all</PrivateAssets>
