--- a/HCore-Amqp/HCore-Amqp.csproj
+++ b/HCore-Amqp/HCore-Amqp.csproj
@@ -1,16 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>HCore.Amqp</RootNamespace>
     <AssemblyName>HCore.Amqp</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AMQPNetLite.Core" Version="2.3.0" />
-    <PackageReference Include="Microsoft.Azure.Management.ServiceBus" Version="3.0.0" />
+    <PackageReference Include="AMQPNetLite.Core" Version="2.4.4" />
+    <PackageReference Include="Microsoft.Azure.Management.ServiceBus" Version="4.0.0" />
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.2.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.4.43" />
+    <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.2.32">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
