--- a/HCore-Metadata/HCore-Metadata.csproj
+++ b/HCore-Metadata/HCore-Metadata.csproj
@@ -1,18 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>HCore.Metadata</RootNamespace>
     <AssemblyName>HCore.Metadata</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="IsoNames.NETStandard" Version="1.2.1" />
-    <PackageReference Include="MaxMind.GeoIP2" Version="3.2.0" />
+    <PackageReference Include="MaxMind.GeoIP2" Version="5.1.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
-    <PackageReference Include="Nager.Country" Version="1.0.4" />
-    <PackageReference Include="VIEApps.Enyim.Caching" Version="1.7.2001.2" />
-	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.4.43" />
+    <PackageReference Include="Nager.Country" Version="3.1.1" />
+    <PackageReference Include="Nager.Country.Translation" Version="3.0.3" />
+    <PackageReference Include="VIEApps.Enyim.Caching" Version="5.0.2205.6" />
+	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.2.32">
+	  <PrivateAssets>all</PrivateAssets>
+	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
   </ItemGroup>
 
   <ItemGroup>
