--- a/HCore-Pusher/HCore-Pusher.csproj
+++ b/HCore-Pusher/HCore-Pusher.csproj
@@ -1,14 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>HCore.Pusher</RootNamespace>
     <AssemblyName>HCore.Pusher</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="PusherServer" Version="4.2.0" />
-	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.4.43" />
+    <PackageReference Include="PusherServer" Version="4.6.1" />
+	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.2.32">
+	  <PrivateAssets>all</PrivateAssets>
+	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
   </ItemGroup>
 
   <ItemGroup>
