--- a/HCore-Segment/HCore-Segment.csproj
+++ b/HCore-Segment/HCore-Segment.csproj
@@ -1,14 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>HCore.Segment</AssemblyName>
     <RootNamespace>HCore.Segment</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Analytics.MultiPlatformTest" Version="0.2.0" />
-	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.4.43" />
+	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.2.32">
+	  <PrivateAssets>all</PrivateAssets>
+	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
   </ItemGroup>
 
   <ItemGroup>
