Make sure work is being finished gracefully when servers are being shut down or rebooted

--- a/HCore-Web/HCore-Web.csproj
+++ b/HCore-Web/HCore-Web.csproj
@@ -23,6 +23,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\HCore-Amqp\HCore-Amqp.csproj" />
 		<ProjectReference Include="..\HCore-Segment\HCore-Segment.csproj" />
 		<ProjectReference Include="..\HCore-Translations\HCore-Translations.csproj" />
 	</ItemGroup>
