Make internals visible to MessagePack for new serialization

--- a/HCore-Tenants/HCore-Tenants.csproj
+++ b/HCore-Tenants/HCore-Tenants.csproj
@@ -20,4 +20,9 @@
     <ProjectReference Include="..\HCore-Web\HCore-Web.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="MessagePack" />
+    <InternalsVisibleTo Include="MessagePack.Resolvers.DynamicObjectResolver" />
+    <InternalsVisibleTo Include="MessagePack.Resolvers.DynamicUnionResolver" />
+  </ItemGroup>
 </Project>
