--- a/HCore-Tenants/HCore-Tenants.csproj
+++ b/HCore-Tenants/HCore-Tenants.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="MessagePack.Annotations" Version="2.5.129" />
 	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.2.32">
 	  <PrivateAssets>all</PrivateAssets>
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -18,11 +19,5 @@
     <ProjectReference Include="..\HCore-Directory\HCore-Directory.csproj" />
     <ProjectReference Include="..\HCore-Storage\HCore-Storage.csproj" />
     <ProjectReference Include="..\HCore-Web\HCore-Web.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <InternalsVisibleTo Include="MessagePack" />
-    <InternalsVisibleTo Include="MessagePack.Resolvers.DynamicObjectResolver" />
-    <InternalsVisibleTo Include="MessagePack.Resolvers.DynamicUnionResolver" />
   </ItemGroup>
 </Project>
